base/021-sched/fuse-021-sched-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: sched
  name: sched
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: sched
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: sched
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-sched:development"
          name: sched
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
